--- a/frontend/backend/frontend/index.html
+++ b/frontend/backend/frontend/index.html
@@ -419,7 +419,7 @@
             const email = prompt("Enter Email (For reference):");
             if (!phone || !email) return;
             try {
-                const response = await fetch('https://your-backend-url.onrender.com/api/mpesa-stk', {
+                const response = await fetch('http://localhost:10000/api/mpesa-stk', {
                     method: 'POST',
                     headers: { 'Content-Type': 'application/json' },
                     body: JSON.stringify({ phone, amount: Math.round(total), memberId: email })
